hphp/hack/test/typecheck/instantiate_unresolved5.php.like_types.exp
File "instantiate_unresolved5.php", line 16, characters 10-18:
Incompatible field values (Typing[4110])
File "instantiate_unresolved5.php", line 15, characters 37-44:
Expected varray<T>
File "instantiate_unresolved5.php", line 15, characters 17-24:
But got dynamic because it is an unenforceable type
